<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_about"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="cr.ac.tec.vis_u.Activities.SectionAbout">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scrollViewAbout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tec"
                android:src="@mipmap/tec_logo" />


            <TextView
                android:id="@+id/about_titleVersion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/about_titleVersion"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/about_titleDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/about_titleDescription"
                android:textColor="#0287d0"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_Description2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/about_description2"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/about_titleAuthors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/about_titleAuthors"
                android:textColor="#0287d0"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_Authors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/about_Authors"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/about_titleAuthors2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/about_titleAuthors2"
                android:textColor="#0287d0"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_Authors2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/about_Authors2"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/about_titleContributors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/about_titleContributors"
                android:textColor="#0287d0"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_Contributors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/about_Contributors"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/about_titleContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/about_titleContact"
                android:textColor="#0287d0"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_Contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/about_Contact"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/about_titleCopyright"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/about_titleCopyright"
                android:textColor="#0287d0"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
